--- a/SchoolManagement/Views/Enrollments/Create.cshtml
+++ b/SchoolManagement/Views/Enrollments/Create.cshtml
@@ -5,55 +5,148 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<script>
+
+    $(function () {
+        var cid = $("#CourseID").val();
+        $.ajax({
+            url: '@Url.Action("_enrollmentPartial", "Enrollments")',
+            dataType: 'html',
+            contentType: 'application/html; charset=utf-8',
+            type: 'GET',
+            data: {
+                courseid: cid
+            },
+            SUCCESS: function (data) {
+                $('#data').fadeOut().html(data).fadeIn();
+            }
+        });
+    });
+
+      $('#CourseID').change(function () {
+        var cid = $("#CourseID").val();
+         $.ajax({
+            url: '@Url.Action("_enrollmentPartial", "Enrollments")',
+            dataType: 'html',
+            contentType: 'application/html; charset=utf-8',
+            type: 'GET',
+            data: {
+                courseid: cid
+            },
+            SUCCESS: function (data) {
+                $('#data').fadeOut().html(data).fadeIn();
+            }
+        });
+    });
+
+    $(function() {
+        $("#StudentID").autocomplete({
+            source: function( request, response ) {
+            $.ajax({
+                url: "/Enrollments/GetStudents",
+                dataType: "json",
+                type: "POST",
+                data: {
+                term: request.term
+                },
+                success: function (data) {
+                    console.log(data);
+                    response($.map(data, function (item) {
+                        return { label: item.Name, value: item.Name, id: item.id };
+                    }))
+                }
+            });
+        },
+        minLength: 2,
+        select: function (event, query) {
+            console.log(query);
+            $("#StudentID").val(query.item.id);
+        }
+        });           
+    });
+
+    function Added(res) {
+        if (res.IsSuccess) {
+            $(function () {
+                $("#failed").fadeOut('fast');
+                $("#success").fadeIn('fast');
+                //  $("#SUCCESS").append(res.Message);
+            })
+        }
+        else {
+            Failed(res);
+        }
+    }
+
+    function Failed(res) {
+        $(function () {
+            $("#failed").fadeIn('fast');
+                $("#success").fadeOut('fast');
+               // $("#failed").append(res.Message);
+            })
+    }
+    function Failure(res) {
+        $(function () {
+            $("#failed").fadeIn('fast');
+            // $("#failed").append(res.Message);
+        })
+    }
+</script>
+
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Ajax.BeginForm("AddStudent", "Enrollments", new AjaxOptions {
+    HttpMethod = "POST",
+    OnSuccess  =  "Added",
+    OnFailure  =  "Failure"
+}))
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Enrollment</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Grade, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Grade, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Grade, "", new { @class = "text-danger" })
-            </div>
-        </div>
+<div class="form-horizontal">
+    <h4>Enrollment</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CourseID, "CourseID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("CourseID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CourseID, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    <div id="failed" class="alert alert-danger" style="display: none;">
+        There was error adding the Student to this course.
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.StudentID, "StudentID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("StudentID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.StudentID, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    <div id="success" class="alert alert-success" style="display: none;">
+        Student Added Successfully.
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.LecturerId, "LecturerId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("LecturerId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.LecturerId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+    <div class="form-group">
+        <label for="CourseID" class = "control-label col-md-2" >Course</label>
+        <div class="col-md-10">
+            @Html.DropDownList("CourseID", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.CourseID, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    
+
+    <div class="form-group">
+        <label for="StudentID" class="control-label col-md-2">Student Name</label>
+        <div class="col-md-10">
+            @Html.DropDownList("StudentID", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.StudentID, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Enroll Student" class="btn btn-success btn-block" />
+        </div>
+    </div>
+</div>
 }
+
+<hr/>
+
+<div id="data">
+    @*@Html.Action("_enrollmentPartial", "Enrollment")*@
+</div>
 
 <div>
     @Html.ActionLink("Back to List", "Index")
